--- a/CS1102_homepage.css
+++ b/CS1102_homepage.css
@@ -7,6 +7,14 @@
     width:600px;
   }
 
+#title{
+  display: inline;
+  width: 200px;
+  border: solid;
+  margin:auto;
+  padding: 0px;
+}
+
   #div1{
     border: solid white;
     width:300px;
@@ -38,10 +46,6 @@
   }
 
   h2{
-    text-align: center;
-  }
-
-  .discovery{
     text-align: center;
   }
 
@@ -101,7 +105,7 @@
     font-size: x-large;
   }
 
-  #makingTricky{
+  #our_motto{
     display:inline-block;
     width:90%;
   }
@@ -111,12 +115,8 @@
     width: 98%;
   }
 
-  #alignHub{
-    text-align: center;
-  }
-
   /*animation for location image, when mouse hover on to image it will rotate */
-  #makingTricky:hover{
+  #our_motto:hover{
     animation-name: animateImg;
     animation-duration: 1s;
   }
