--- a/CS1102_homepage.css
+++ b/CS1102_homepage.css
@@ -7,10 +7,13 @@
     width:600px;
   }
 
+#logo{
+    width:40%;
+    height:20%;
+}
 #title{
   display: inline;
-  width: 200px;
-  border: solid;
+  width: 50%;
   margin:auto;
   padding: 0px;
 }
